max device information added to token

--- a/caerulean/whirlpool/Dockerfile
+++ b/caerulean/whirlpool/Dockerfile
@@ -42,6 +42,7 @@ ENV SEASIDE_API_PORT=8587
 ENV SEASIDE_CERTIFICATE_PATH=certificates
 ENV SEASIDE_LOG_PATH=logs
 
+ENV SEASIDE_MAX_DEVICES=1
 ENV SEASIDE_MAX_VIRIDIANS=10
 ENV SEASIDE_MAX_ADMINS=5
 
