--- a/caerulean/whirlpool/example.conf.env
+++ b/caerulean/whirlpool/example.conf.env
@@ -33,6 +33,8 @@ SEASIDE_TYPHOON_PORT=29384
 # DNS server that will be suggested to the clients (although not enforced), can be any local or global reliable DNS or 0.0.0.0 for using the current one
 SEASIDE_SUGGESTED_DNS=0.0.0.0
 
+# Maximum number of devices every viridian is allowed to connect simultaneously
+SEASIDE_MAX_DEVICES=1
 # Maximum network viridian number (should be >= 0)
 SEASIDE_MAX_VIRIDIANS=10
 # Maximum privileged viridian number (should be >= 0)
