--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,6 +56,11 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
 
+      - name: Install Dependencies 🔮
+        if: runner.os == 'Linux'
+        working-directory: viridian/algae
+        run: sudo apt-get install python3-nftables
+
       - name: Setup VPN Server 🖴
         id: setup-test-server
         uses: ./.github/actions/setup-server
@@ -64,11 +69,6 @@ jobs:
           lower_port: ${{ env.TARGET_LOWER_PORT }}
           higher_port: ${{ env.TARGET_HIGHER_PORT }}
           test-command: ${{ env.TEST_COMMAND }} --local-port 44443
-
-      - name: Install Dependencies 🔮
-        if: runner.os == 'Linux'
-        working-directory: viridian/algae
-        run: sudo apt-get install python3-nftables
 
       - name: Test Viridian Algae PORT (standalone) 🧪
         id: test-viridian-algae-port
@@ -90,7 +90,7 @@ jobs:
       SEASIDE_LOG_LEVEL: reeflib=DEBUG,INFO
       WINDIVERT_PATH: ${{ github.workspace }}/viridian/reef/windivert-bin
       SUDO: ${{ matrix.os == 'ubuntu' && 'sudo -E env "PATH=$PATH"' || '' }}
-      TEST_COMMAND: ${{ matrix.os == 'ubuntu' && 'curl' || '& curl.exe' }} -v -I --fail --max-time 15 https://1.1.1.1
+      TEST_COMMAND: ${{ matrix.os == 'ubuntu' && 'nft list ruleset' || '& curl.exe -v -I --fail --max-time 15 https://1.1.1.1' }}
     strategy:
       fail-fast: false
       matrix:
