--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,12 +73,12 @@ jobs:
       - name: Test Viridian Algae PORT (standalone) 🧪
         id: test-viridian-algae-port
         working-directory: viridian/algae
-        run: sudo -E env "PATH=$PATH" poetry poe client -s port -l "${{ steps.setup-test-server.outputs.connection-link }}" --capture-ports "${{ env.TARGET_LOWER_PORT }}:${{ env.TARGET_HIGHER_PORT }}" -e "${{ env.TEST_COMMAND }} --local-port 44444"
+        run: sudo -E env "PATH=$PATH" poetry poe client -s port -l "${{ steps.setup-test-server.outputs.connection-link }}" --capture-ports "${{ env.TARGET_LOWER_PORT }}:${{ env.TARGET_HIGHER_PORT }}" -e "nft list ruleset"
 
       - name: Test Viridian Algae TYPHOON (standalone) 🧪
         id: test-viridian-algae-typhoon
         working-directory: viridian/algae
-        run: sudo -E env "PATH=$PATH" poetry poe client -s typhoon -l "${{ steps.setup-test-server.outputs.connection-link }}" --capture-ports "${{ env.TARGET_LOWER_PORT }}:${{ env.TARGET_HIGHER_PORT }}" -e "${{ env.TEST_COMMAND }} --local-port 44445"
+        run: sudo -E env "PATH=$PATH" poetry poe client -s typhoon -l "${{ steps.setup-test-server.outputs.connection-link }}" --capture-ports "${{ env.TARGET_LOWER_PORT }}:${{ env.TARGET_HIGHER_PORT }}" -e "nft list ruleset"
 
   viridian-reef-test:
     name: Test Viridian Reef
