--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -51,6 +51,7 @@ repository = "https://github.com/pseusys/SeasideVPN"
 
 [project.optional-dependencies]
 client = [
+    "ansibleguy-nftables~=1.0.2.post1",
     "colorama~=0.4.6",
     "pyroute2~=0.7.9",
     "betterproto~=2.0.0b6",
