--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -34,7 +34,7 @@ x25519-dalek = { version = "^2.0.1", features = ["static_secrets"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 nftables = "^0.6.3"
-neli = "^0.6.4"
+rtnetlink = "^0.17.0"
 tun = { version = "^0.7.1", features = ["async"] }
 
 [target.'cfg(target_os = "windows")'.dependencies]
