--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -53,26 +53,26 @@ repository = "https://github.com/pseusys/SeasideVPN"
 client = [
     "ansibleguy-nftables~=1.0.2.post1",
     "colorama~=0.4.6",
-    "pyroute2~=0.7.9",
+    "pyroute2~=0.9.4",
     "betterproto~=2.0.0b6",
     "pymonocypher~=4.0.2.5",
     "semver~=3.0.4"
 ]
 
 devel = [
-    "pytest~=8.3.2",
+    "pytest~=8.4.1",
     "pythonping~=1.1.4",
     "dnspython~=2.7.0",
-    "pytest-asyncio~=0.26.0",
-    "pytest-timeout~=2.3.1",
+    "pytest-asyncio~=1.1.0",
+    "pytest-timeout~=2.4.0",
     "pytest-dependency~=0.6.0"
 ]
 
 codestyle = [
-    "mypy~=1.3.0",
-    "flake8~=7.1.0",
-    "black~=24.8.0",
-    "isort~=5.11.0",
+    "mypy~=1.17.0",
+    "flake8~=7.3.0",
+    "black~=25.1.0",
+    "isort~=5.13.2",
     "types-PyYAML~=6.0.2"
 ]
 
@@ -83,19 +83,19 @@ bundle = [
 
 setup = [
     "colorama~=0.4.6",
-    "cryptography~=44.0.0",
+    "cryptography~=45.0.6",
     "semver~=3.0.2"
 ]
 
 test = [
     "colorama~=0.4.6",
-    "python-on-whales~=0.76.1"
+    "python-on-whales~=0.78.0"
 ]
 
 protocol = [
     "jupyter~=1.1.1",
     "ipywidgets~=8.1.6",
-    "matplotlib~=3.10.1",
+    "matplotlib~=3.10.6",
     "scapy~=2.6.1",
     "nbstripout~=0.8.1"
 ]
@@ -129,7 +129,7 @@ poethepoet = "^0.34.0"
 
 [tool.poe]
 default_task_type = "script"
-env = { COMPOSE_BAKE = "true" }
+# env = { COMPOSE_BAKE = "true" }
 
 
 [tool.poe.tasks]
