--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -127,7 +127,7 @@ poethepoet = "^0.34.0"
 
 [tool.poe]
 default_task_type = "script"
-env = { COMPOSE_BAKE = "true" }
+# env = { COMPOSE_BAKE = "true" }
 
 
 [tool.poe.tasks]
