--- a/caerulean/whirlpool/Makefile
+++ b/caerulean/whirlpool/Makefile
@@ -5,6 +5,7 @@
 SHELL=/bin/bash
 .SHELLFLAGS=-c -e
 
+PROTOGO_FLATC_VERSION=25.2.10
 LINKING_FLAGS=""
 
 GOOS=linux
@@ -46,7 +47,7 @@ help:
 
 build:
 	@ # Generate flatbuffers files, install dependencies and build executable
-	flatc -g --grpc --reflect-types -I ${PROJECT_ROOT}/vessels ${PROJECT_ROOT}/vessels/*.fbs
+	protogo mod tidy -- flatc -g --grpc --reflect-types -I ${PROJECT_ROOT}/vessels ${PROJECT_ROOT}/vessels/*.fbs
 	go build -ldflags ${LINKING_FLAGS} -o build/$(EXEC_NAME) ./sources
 .PHONY: build
 
