--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,9 @@ viridian/algae/**/__pycache__/
 viridian/algae/**/.mypy_cache/
 viridian/algae/**/.pytest-cache/
 
-## Python generated files:
+## Python generated files (and compiler binary):
+viridian/algae/flatbuffers-compiler
+viridian/algae/sources/interaction/*_grpc.*
 viridian/algae/sources/interaction/generated/
 viridian/algae/*.pyz
 
