--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -17,7 +17,8 @@ RUN pip3 install --no-cache-dir --break-system-packages .[devel]
 
 # Copy protobuf files and generate python code.
 COPY vessels ./vessels
-RUN mkdir generated && python3 -m grpc_tools.protoc -I=vessels --python_betterproto2_out=generated --python_betterproto2_opt=client_generation=async vessels/*.proto
+COPY viridian/algae/scripts/ ./scripts/
+RUN mkdir generated && python3 -m scripts.process -s ./vessels -d ./generated
 
 
 FROM ubuntu:24.10 AS default
@@ -38,7 +39,7 @@ RUN pip3 install --no-cache-dir --break-system-packages .[devel,client]
 
 # Copy algae and test sources, also copy generated protobuf files.
 COPY viridian/algae/sources/ ./sources/
-COPY --from=builder /seaside/algae/generated/ ./sources/interaction/generated/
+COPY --from=builder /seaside/algae/generated/ ./sources/interaction/
 COPY viridian/algae/tests/ ./tests/
 
 ENV SEASIDE_ADDRESS=
