--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -47,27 +47,25 @@ repository = "https://github.com/pseusys/SeasideVPN"
 [project.optional-dependencies]
 client = [
     "ansibleguy-nftables~=1.0.2.post1",
-    "betterproto2~=0.8.0",
     "colorama~=0.4.6",
+    "flatbuffers~=25.2.10",
+    "grpcio~=1.74.0",
     "pyroute2~=0.9.4",
     "pymonocypher~=4.0.2.5",
     "semver~=3.0.4"
 ]
 
 devel = [
-    "betterproto2[grpclib,pydantic]~=0.8.0",
-    "betterproto2_compiler~=0.8.0",
-    "grpcio-tools~=1.74.0",
     "pytest~=8.4.2",
     "pythonping~=1.1.4",
     "dnspython~=2.8.0",
-    "pytest-asyncio~=1.1.0",
+    "pytest-asyncio~=1.2.0",
     "pytest-timeout~=2.4.0",
     "pytest-dependency~=0.6.0"
 ]
 
 codestyle = [
-    "mypy~=1.17.0",
+    "mypy~=1.18.1",
     "flake8~=7.3.0",
     "black~=25.1.0",
     "isort~=6.0.1",
@@ -135,7 +133,7 @@ client = { script = "sources.automation.simple_client:main", help = "Import and 
 fixture = { script = "sources.automation.whirlpool_fixtures:main", help = "Import and execute one of the whirlpool fixtures, pass console arguments to it" }
 lint = { script = "scripts.codestyle:lint", help = "Lint all python code: run 'flake8', 'black' and 'mypy'" }
 format = { script = "scripts.codestyle:format", help = "Format all python code: change code formatting where possible (using 'black')" }
-generate = { script = "scripts.process:generate", help = "Generate protobuf source files, previous generation results will be removed; libraries 'grpcio-tools' and 'betterproto' is used for generation" }
+generate = { script = "scripts.process:generate", help = "Generate flatbuffers source files, previous generation results will be removed" }
 bundle = { script = "scripts.process:bundle", help = "Bundle caerulean installation script; library 'zipapps' is used for bundling" }
 clean = { script = "scripts.process:clean", help = "Delete all algae generated source files, build files and executables, also remove all related Docker containers, images and networks" }
 test-unit = { script = "scripts.test:test_set('unit')", help = "Run unit tests: all the algae client functions in particular" }
