--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -135,7 +135,7 @@ client = { script = "sources.automation.simple_client:main", help = "Import and 
 fixture = { script = "sources.automation.whirlpool_fixtures:main", help = "Import and execute one of the whirlpool fixtures, pass console arguments to it" }
 lint = { script = "scripts.codestyle:lint", help = "Lint all python code: run 'flake8', 'black' and 'mypy'" }
 format = { script = "scripts.codestyle:format", help = "Format all python code: change code formatting where possible (using 'black')" }
-generate = { script = "scripts.process:generate", help = "Generate protobuf source files, previous generation results will be removed; libraries 'grpcio-tools' and 'betterproto' is used for generation" }
+generate = { script = "scripts.process:generate", help = "Generate protobuf source files, previous generation results will be removed, libraries 'grpcio-tools' and 'betterproto' are used for generation" }
 bundle = { script = "scripts.process:bundle", help = "Bundle caerulean installation script; library 'zipapps' is used for bundling" }
 clean = { script = "scripts.process:clean", help = "Delete all algae generated source files, build files and executables, also remove all related Docker containers, images and networks" }
 test-unit = { script = "scripts.test:test_set('unit')", help = "Run unit tests: all the algae client functions in particular" }
