--- a/caerulean/whirlpool/Makefile
+++ b/caerulean/whirlpool/Makefile
@@ -5,6 +5,7 @@
 SHELL=/bin/bash
 .SHELLFLAGS=-c -e
 
+PROTOGO_PROTOC_INCLUDE=standard
 PROTOGO_PROTOC_VERSION=24.4
 LINKING_FLAGS=""
 GOOS=linux
@@ -45,7 +46,7 @@ help:
 
 build:
 	@ # Generate protobuf files, install dependencies and build executable
-	protogo mod tidy -- protoc -I=${PROJECT_ROOT} --go_out=. --go-grpc_out=. ${PROJECT_ROOT}/vessels/*.proto
+	protogo mod tidy -- protoc -I=${PROJECT_ROOT}/vessels --go_out=. --go-grpc_out=. ${PROJECT_ROOT}/vessels/*.proto
 	go build -ldflags ${LINKING_FLAGS} -o build/$(EXEC_NAME) ./sources
 .PHONY: build
 
