--- a/caerulean/whirlpool/example.conf.env
+++ b/caerulean/whirlpool/example.conf.env
@@ -8,6 +8,9 @@ SEASIDE_SERVER_KEY=ITSASAMPLESEASIDEVPNSERVERKEYUSEFORTESTONLY=  # A valid BASE6
 SEASIDE_PRIVATE_KEY=THISISASAMPLESEASIDEVPNPRIVATESERVERKEYUSEFORTESTSONLY==  # A valid BASE64 (standard encoding) 40-byte string is expected
 # This token is critical, but still can be changed in case all the users can be contacted for public key update.
 
+# API owner name, can be used for API owner key generation
+SEASIDE_API_OWNER_NAME=admin
+
 # Path for storing certificates, two files should be present there: "cert.crt" and "key.crt"
 SEASIDE_CERTIFICATE_PATH=certificates
 # Lowest logging level for all the logs (both CLI and file)
