--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -8,9 +8,6 @@ ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Install python dependencies and build system.
-RUN apt-get update && apt-get install -y --no-install-recommends && rm -rf /var/lib/apt/lists/*
-
 # Export dependencies to a `requirements.txt` install protobuf compiler.
 COPY viridian/algae/pyproject.toml viridian/algae/README.md viridian/algae/__init__.py ./
 RUN pip3 install --no-cache-dir --break-system-packages .[devel]
@@ -32,7 +29,7 @@ ENV PYTHONDONTWRITEBYTECODE=1
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install testing dependencies.
-RUN apt-get update && apt-get install -y --no-install-recommends build-essential nftables iproute2 iputils-ping dnsutils python3-pip && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends build-essential nftables iproute2 iputils-ping dnsutils && rm -rf /var/lib/apt/lists/*
 COPY viridian/algae/pyproject.toml viridian/algae/README.md viridian/algae/__init__.py ./
 RUN pip3 install --no-cache-dir --break-system-packages .[devel,client]
 
