--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM ubuntu:24.10 AS builder
+FROM ubuntu:24.04 AS builder
 
 WORKDIR /seaside/algae
 
@@ -9,7 +9,7 @@ ENV PYTHONDONTWRITEBYTECODE=1
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install python dependencies and build system.
-RUN apt-get update && apt-get install -y --no-install-recommends python3 python3-pip && rm -rf /var/lib/apt/lists/*
+RUN apt-get -y update && apt-get install -y --no-install-recommends python3 python3-pip && rm -rf /var/lib/apt/lists/*
 
 # Export dependencies to a `requirements.txt` install protobuf compiler.
 COPY viridian/algae/pyproject.toml viridian/algae/README.md viridian/algae/__init__.py ./
@@ -20,7 +20,7 @@ COPY vessels ./vessels
 RUN mkdir generated && python3 -m grpc_tools.protoc -I=vessels --python_betterproto2_out=generated --python_betterproto2_opt=client_generation=async vessels/*.proto
 
 
-FROM ubuntu:24.10 AS default
+FROM ubuntu:24.04 AS default
 
 ARG RUNNING_IN_CI
 ARG RUNNING_TEST_FILE
