no local token querying

--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -41,18 +41,13 @@ COPY viridian/algae/sources/ ./sources/
 COPY --from=builder /seaside/algae/generated/ ./sources/generated/
 COPY viridian/algae/tests/ ./tests/
 
-ENV SEASIDE_ADDRESS=
-ENV SEASIDE_API_PORT=
-ENV SEASIDE_SUGGESTED_DNS=0.0.0.0
-ENV SEASIDE_TUNNEL_NAME=seatun
-
 ENV TEST_FILE=$RUNNING_TEST_FILE
 ENV RUNNING_IN_CI=${RUNNING_IN_CI:-0}
 ENV LOGGING_LEVEL=${RUNNING_IN_CI:+ERROR}
 ENV LOGGING_LEVEL=${RUNNING_IN_CI:-DEBUG}
 
 ENV TEST_COMMAND="python3 -m pytest --log-cli-level=$LOGGING_LEVEL tests/$TEST_FILE"
-ENV VPN_COMMAND="python3 -m sources.automation.testing_client -a \$SEASIDE_ADDRESS -p \$SEASIDE_API_PORT --dns \$SEASIDE_SUGGESTED_DNS -c \"\$TEST_COMMAND\""
+ENV VPN_COMMAND="python3 -m sources.automation.testing_client -c \"\$TEST_COMMAND\""
 
 # Just sleep - run nothing.
 ENTRYPOINT ["sh", "-c", "eval \"$VPN_COMMAND\""]
