--- a/viridian/algae/docker/test.conf.env
+++ b/viridian/algae/docker/test.conf.env
@@ -8,7 +8,11 @@ SEASIDE_SERVER_KEY=ITSASAMPLESEASIDEVPNSERVERKEYUSEFORTESTONLY=
 SEASIDE_API_OWNER_NAME=admin
 
 SEASIDE_SUGGESTED_DNS=0.0.0.0
+
+SEASIDE_PORT_PORT=29384
+SEASIDE_TYPHOON_PORT=29384
 SEASIDE_API_PORT=8587
+
 SEASIDE_LOG_LEVEL=DEBUG
 
 # Buffer for echo server message storing
