--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -14,16 +14,13 @@ inputs:
     description: The maximum source port number that will be used for testing
     required: true
     default: 44445
-  certificate-file:
-    description: File where client connection certificate will be stored
-    required: true
   test-command:
     description: Test command for no VPN access test
 
 outputs:
-  connection-link:
-    description: VPN connection link
-    value: ${{ steps.get-server-connection-link.outputs.connection-link }}
+  connection-certificate:
+    description: VPN client connection certificate
+    value: ${{ runner.temp }}/connection-certificate.sea
 
 runs:
   using: composite
@@ -62,7 +59,9 @@ runs:
       id: resolve-target
       working-directory: .github
       shell: bash
-      run: echo "target-ip=$(node actions/setup-server/resolve-target.cjs ${{ inputs.target }})" >> $GITHUB_OUTPUT
+      run: |
+        TARGET_IP=$(node actions/setup-server/resolve-target.cjs ${{ inputs.target }})
+        echo "target-ip=${TARGET_IP}" >> $GITHUB_OUTPUT
 
     - name: Load .ENV File
       uses: aarcangeli/load-dotenv@v1
@@ -77,17 +76,19 @@ runs:
       shell: bash
       env:
         SUDO: ${{ runner.os == 'Linux' && 'sudo -E env "PATH=$PATH"' || '' }}
-      run: echo "server-ip=$(${{ env.SUDO }} node actions/setup-server/configure_viridian_test.mjs -l ${{ inputs.lower_port }} -h ${{ inputs.higher_port }} -t ${{ steps.resolve-target.outputs.target-ip }} -s)" >> $GITHUB_OUTPUT
+      run: |
+        SERVER_IP=$(${{ env.SUDO }} node actions/setup-server/configure_viridian_test.mjs -l ${{ inputs.lower_port }} -h ${{ inputs.higher_port }} -t ${{ steps.resolve-target.outputs.target-ip }} -s)
+        echo "server-ip=${SERVER_IP}" >> $GITHUB_OUTPUT
 
-    - name: Get Connection Link
-      id: get-server-connection-link
+    - name: Get Connection Certificate
+      id: get-server-connection-certificate
       working-directory: viridian/algae
       shell: bash
       env:
         SEASIDE_ADDRESS: ${{ steps.start-background-server.outputs.server-ip }}
         SEASIDE_CERTIFICATE_PATH: certificates/viridian
         SEASIDE_LOG_LEVEL: ERROR
-      run: echo "connection-link=$(poetry poe -q fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" -k "${{ env.SEASIDE_API_KEY_ADMIN }}" supply-viridian -s)" >> $GITHUB_OUTPUT
+      run: poetry poe -q fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" supply-viridian-client -o ${{ outputs.connection-certificate }}
 
     - name: Test Echo Server Access (no VPN)
       if: ${{ inputs.test-command != '' }}
