--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -17,10 +17,13 @@ inputs:
   test-command:
     description: Test command for no VPN access test
 
+env:
+  CONNECTION_CERTIFICATE_FILE: ${{ runner.temp }}/connection-certificate.sea
+
 outputs:
   connection-certificate:
     description: VPN client connection certificate
-    value: ${{ runner.temp }}/connection-certificate.sea
+    value: ${{ env.CONNECTION_CERTIFICATE_FILE }}
 
 runs:
   using: composite
@@ -88,7 +91,7 @@ runs:
         SEASIDE_ADDRESS: ${{ steps.start-background-server.outputs.server-ip }}
         SEASIDE_CERTIFICATE_PATH: certificates/viridian
         SEASIDE_LOG_LEVEL: ERROR
-      run: poetry poe -q fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" supply-viridian-client -o ${{ outputs.connection-certificate }}
+      run: poetry poe -q fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" supply-viridian-client -o "${{ env.CONNECTION_CERTIFICATE_FILE }}"
 
     - name: Test Echo Server Access (no VPN)
       if: ${{ inputs.test-command != '' }}
