--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -17,13 +17,10 @@ inputs:
   test-command:
     description: Test command for no VPN access test
 
-env:
-  CONNECTION_CERTIFICATE_FILE: ${{ runner.temp }}/connection-certificate.sea
-
 outputs:
   connection-certificate:
     description: VPN client connection certificate
-    value: ${{ env.CONNECTION_CERTIFICATE_FILE }}
+    value: ${{ steps.get-server-connection-certificate.outputs.connection-certificate }}
 
 runs:
   using: composite
@@ -91,7 +88,10 @@ runs:
         SEASIDE_ADDRESS: ${{ steps.start-background-server.outputs.server-ip }}
         SEASIDE_CERTIFICATE_PATH: certificates/viridian
         SEASIDE_LOG_LEVEL: ERROR
-      run: poetry poe -q fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" supply-viridian-client -o "${{ env.CONNECTION_CERTIFICATE_FILE }}"
+      run: |
+        CONNECTION_CERTIFICATE_FILE=${{ runner.temp }}/connection-certificate.sea
+        poetry poe -q fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" supply-viridian-client -o "${CONNECTION_CERTIFICATE_FILE}"
+        echo "connection-certificate=${CONNECTION_CERTIFICATE_FILE}" >> $GITHUB_OUTPUT
 
     - name: Test Echo Server Access (no VPN)
       if: ${{ inputs.test-command != '' }}
