--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -24,7 +24,6 @@ lazy_static = "^1.5.0"
 log = "^0.4.22"
 num_enum = "^0.7.3"
 prost = { version = "^0.14.1", optional = true }
-prost-types = { version = "^0.14.1", optional = true }
 rand = "^0.8.5"
 regex = "^1.11.1"
 simple-error = "^0.3.1"
@@ -48,6 +47,7 @@ wmi = "^0.17.2"
 
 [build-dependencies]
 prost-build = "^0.14.1"
+protoc-bin-vendored = "^3.2.0"
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
 reqwest = { version = "^0.12.23", features = ["blocking", "json"] }
@@ -56,7 +56,7 @@ zip = "^4.5.0"
 
 
 [features]
-cli-exec = ["structopt", "prost", "prost-types"]
+cli-exec = ["structopt", "prost"]
 
 
 
