--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -130,6 +130,7 @@ jobs:
         with:
           toolchain: stable
           target: ${{ env.TARGET }}
+          rust-src-dir: viridian/reef
           override: true
 
       - name: Download Dependencies 🔮
