--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -89,7 +89,7 @@ runs:
         SEASIDE_CERTIFICATE_PATH: certificates/viridian
         SEASIDE_LOG_LEVEL: ERROR
       run: |
-        CONNECTION_CERTIFICATE_FILE=${{ runner.temp }}/connection-certificate.sea
+        CONNECTION_CERTIFICATE_FILE="${{ runner.temp }}/connection-certificate.sea"
         poetry poe -q fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" supply-viridian-client -o "${CONNECTION_CERTIFICATE_FILE}"
         echo "connection-certificate=${CONNECTION_CERTIFICATE_FILE}" >> $GITHUB_OUTPUT
 
