--- a/.codespellrc
+++ b/.codespellrc
@@ -1,6 +1,6 @@
 [codespell]
 builtin = clear,rare,informal,usage,code,names
-ignore-words-list = stdio,crate,keypair,uint,jupyter,mut
+ignore-words-list = stdio,crate,keypair,uint,jupyter,mut,CA
 skip = *.ipynb
 count =
 check-filenames =
