Cache enabled for GO

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,6 +74,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "^1.23.0"
+          cache-dependency-path: caerulean/whirlpool
 
       - name: Install Dependencies 🔮
         working-directory: caerulean/whirlpool
