Improved protobuf definitions (#31)
* betterproto2 updated

* improved protobuf definitions

* LICENSE + proto

* protogo building

* license removed

* whirlpool updated

* client key creation implemented

* certificates static

* Entrypoints patched

* some testing fixed

* assume pip

* removed python3

* python + pip?

* env restored

* ubuntu version

* integration fixture updated

* re-integration

* integration api

* base64

* authenticate client

* name fixed

* admin token test added

* key parsing

* key format changed

* encoding

* no local token querying

* awaiting client

* retries, any certificate types loading

* decoding key??

* private key password

* HDSK check added

* nil data code changed

* tunnel name reverted

* parsing default dns

* python clients reverted

* first step in quick test update

* output -> env

* env -> outputs

* flags fixed

* clients accept certificate

* protocol output

* reef certificate introduction

* bundled proto

* protobuf as a runtime dependency

* proto relative path

* assertion added

* non-canonical

* lint applied

* recertificated

* certificates checking disabled

* PKCS8

* copied certificates

* temporary viridian directory

* charged temp file closed

* logging updated

* WSL installer updated

* print info

* certificate file escaped

* lesser fixes

* linting fixed

* Cache enabled for GO

---------

Co-authored-by: pseusys <aleksandr.sergeev.ad@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,8 +48,6 @@ jobs:
 
       - name: Save Artifact 🏺
         uses: actions/upload-artifact@v4
-        env:
-          BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         with:
           name: viridian-algae-executable-${{ steps.branch-name.outputs.value }}
           retention-days: 3
@@ -76,12 +74,11 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "^1.23.0"
+          cache-dependency-path: caerulean/whirlpool
 
       - name: Install Dependencies 🔮
         working-directory: caerulean/whirlpool
-        run: |
-          go install github.com/xlab/c-for-go@latest
-          go install github.com/pseusys/protogo@latest
+        run: go install github.com/pseusys/protogo@latest
 
       - name: Build Caerulean Whirlpool 🏗️
         working-directory: caerulean/whirlpool
@@ -103,8 +100,6 @@ jobs:
 
       - name: Save Artifact 🏺
         uses: actions/upload-artifact@v4
-        env:
-          BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         with:
           name: caerulean-whirlpool-executable-${{ steps.branch-name.outputs.value }}-${{ matrix.arch }}
           path: caerulean/whirlpool/build/caerulean_whirlpool_executable_*.run
@@ -136,6 +131,7 @@ jobs:
         with:
           toolchain: stable
           target: ${{ env.TARGET }}
+          rust-src-dir: viridian/reef
           override: true
 
       - name: Download Dependencies 🔮
