--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM ubuntu:24.10 AS builder
+FROM ubuntu:24.04 AS builder
 
 WORKDIR /seaside/algae
 
@@ -9,18 +9,18 @@ ENV PYTHONDONTWRITEBYTECODE=1
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install python dependencies and build system.
-RUN apt-get update && apt-get install -y --no-install-recommends python3-pip && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends python3 python3-pip && rm -rf /var/lib/apt/lists/*
 
 # Export dependencies to a `requirements.txt` install protobuf compiler.
 COPY viridian/algae/pyproject.toml viridian/algae/README.md viridian/algae/__init__.py ./
-RUN pip3 install --no-cache-dir --break-system-packages .
+RUN pip3 install --no-cache-dir --break-system-packages .[devel]
 
 # Copy protobuf files and generate python code.
 COPY vessels ./vessels
-RUN python3 -m grpc_tools.protoc -I=vessels --python_betterproto_out=. vessels/*.proto
+RUN mkdir generated && python3 -m grpc_tools.protoc -I=vessels --python_betterproto2_out=generated --python_betterproto2_opt=client_generation=async vessels/*.proto
 
 
-FROM ubuntu:24.10 AS default
+FROM ubuntu:24.04 AS default
 
 ARG RUNNING_IN_CI
 ARG RUNNING_TEST_FILE
@@ -32,19 +32,15 @@ ENV PYTHONDONTWRITEBYTECODE=1
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install testing dependencies.
-RUN apt-get update && apt-get install -y --no-install-recommends build-essential nftables iproute2 iputils-ping dnsutils python3-pip && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends build-essential nftables iproute2 iputils-ping dnsutils python3 python3-pip && rm -rf /var/lib/apt/lists/*
 COPY viridian/algae/pyproject.toml viridian/algae/README.md viridian/algae/__init__.py ./
 RUN pip3 install --no-cache-dir --break-system-packages .[devel,client]
 
 # Copy algae and test sources, also copy generated protobuf files.
 COPY viridian/algae/sources/ ./sources/
-COPY --from=builder /seaside/algae/generated/ ./sources/interaction/generated/
+COPY --from=builder /seaside/algae/generated/ ./sources/generated/
 COPY viridian/algae/tests/ ./tests/
 
-ENV SEASIDE_ADDRESS=
-ENV SEASIDE_API_KEY_OWNER=
-ENV SEASIDE_API_PORT=
-ENV SEASIDE_SUGGESTED_DNS=0.0.0.0
 ENV SEASIDE_TUNNEL_NAME=seatun
 
 ENV TEST_FILE=$RUNNING_TEST_FILE
@@ -53,7 +49,7 @@ ENV LOGGING_LEVEL=${RUNNING_IN_CI:+ERROR}
 ENV LOGGING_LEVEL=${RUNNING_IN_CI:-DEBUG}
 
 ENV TEST_COMMAND="python3 -m pytest --log-cli-level=$LOGGING_LEVEL tests/$TEST_FILE"
-ENV VPN_COMMAND="python3 -m sources.automation.simple_client -a \$SEASIDE_ADDRESS -k \$SEASIDE_API_KEY_OWNER -p \$SEASIDE_API_PORT -d \$SEASIDE_SUGGESTED_DNS -e \"\$TEST_COMMAND\""
+ENV VPN_COMMAND="python3 -m sources.automation.simple_client -c \"\$TEST_COMMAND\""
 
 # Just sleep - run nothing.
 ENTRYPOINT ["sh", "-c", "eval \"$VPN_COMMAND\""]
