--- a/viridian/algae/docker/test.conf.env
+++ b/viridian/algae/docker/test.conf.env
@@ -5,11 +5,12 @@
 SEASIDE_PRIVATE_KEY=THISISASAMPLESEASIDEVPNPRIVATESERVERKEYUSEFORTESTSONLY==
 SEASIDE_SERVER_KEY=ITSASAMPLESEASIDEVPNSERVERKEYUSEFORTESTONLY=
 
-SEASIDE_API_KEY_OWNER=super_secret_owner_payload_data
-SEASIDE_API_KEY_ADMIN=super_secret_admin_payload_data
-
 SEASIDE_SUGGESTED_DNS=0.0.0.0
+
+SEASIDE_PORT_PORT=29384
+SEASIDE_TYPHOON_PORT=29384
 SEASIDE_API_PORT=8587
+
 SEASIDE_LOG_LEVEL=DEBUG
 
 # Buffer for echo server message storing
