--- a/viridian/algae/example.conf.env
+++ b/viridian/algae/example.conf.env
@@ -3,9 +3,6 @@ SEASIDE_ADDRESS=127.0.0.1
 # Sample API port for testing
 SEASIDE_API_PORT=8587
 
-# API key for testing
-SEASIDE_API_KEY_OWNER=super_secret_owner_payload_data
-
 # Name of the TUN interface
 SEASIDE_TUNNEL_NAME=seatun
 # Address of the TUN interface
@@ -16,7 +13,7 @@ SEASIDE_TUNNEL_NETMASK=255.255.255.0
 SEASIDE_TUNNEL_SVA=65
 # All of the constants above are used in the simple client
 
-# Root certificate authority path, with client certificates (cert.crt, cert.key) and CA (rootCA.crt, optional): will be used for API calls
+# Root certificate authority path, with certificate files
 SEASIDE_CERTIFICATE_PATH=cert/
 # Path of the system resolv configuration file: will be used in the simple client
 SEASIDE_RESOLV_CONF_PATH=/etc/resolv.conf
