--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -5,11 +5,6 @@ description = "A testing SeasideVPN client and installation script for Linux"
 readme = "README.md"
 requires-python = ">=3.11,<3.13"
 
-
-license-files = [
-    "../../LICENSE"
-]
-
 authors = [
     { name = "Alexander Sergeev", email = "alexander.sergeev@onmail.com" }
 ]
@@ -39,40 +34,37 @@ classifiers = [
     "Topic :: System :: Networking"
 ]
 
-dependencies = [
-    "grpcio-tools~=1.62.0",
-    "betterproto[compiler]~=2.0.0b6"
-]
-
-
 [project.urls]
 repository = "https://github.com/pseusys/SeasideVPN"
-
 
 [project.optional-dependencies]
 client = [
     "ansibleguy-nftables~=1.0.2.post1",
+    "betterproto2[grpclib]~=0.9.0",
     "colorama~=0.4.6",
     "pyroute2~=0.9.4",
-    "betterproto~=2.0.0b6",
-    "pymonocypher~=4.0.2.5",
+    "pymonocypher~=4.0.2.5",  # TODO: replace with 'pycryptodome'
+    "cryptography~=46.0.1",
     "semver~=3.0.4"
 ]
 
 devel = [
+    "betterproto2[grpclib]~=0.9.0",
+    "betterproto2_compiler~=0.9.0",
+    "grpcio-tools~=1.75.1",
     "pytest~=8.4.2",
     "pythonping~=1.1.4",
-    "dnspython~=2.7.0",
-    "pytest-asyncio~=1.1.0",
+    "dnspython~=2.8.0",
+    "pytest-asyncio~=1.2.0",
     "pytest-timeout~=2.4.0",
     "pytest-dependency~=0.6.0"
 ]
 
 codestyle = [
-    "mypy~=1.17.0",
+    "mypy~=1.18.2",
     "flake8~=7.3.0",
-    "black~=25.1.0",
-    "isort~=5.13.2",
+    "black~=25.9.0",
+    "isort~=6.0.1",
     "types-PyYAML~=6.0.2"
 ]
 
@@ -83,7 +75,7 @@ bundle = [
 
 setup = [
     "colorama~=0.4.6",
-    "cryptography~=45.0.7",
+    "cryptography~=46.0.1",
     "semver~=3.0.2"
 ]
 
@@ -119,7 +111,6 @@ packages = [
     { include = "__init__.py" }
 ]
 
-
 [tool.poetry.requires-plugins]
 poethepoet = "^0.34.0"
 
@@ -131,13 +122,12 @@ poethepoet = "^0.34.0"
 default_task_type = "script"
 env = { COMPOSE_BAKE = "true" }
 
-
 [tool.poe.tasks]
 client = { script = "sources.automation.simple_client:main", help = "Import and execute main function of algae simple client, pass console arguments to it" }
 fixture = { script = "sources.automation.whirlpool_fixtures:main", help = "Import and execute one of the whirlpool fixtures, pass console arguments to it" }
 lint = { script = "scripts.codestyle:lint", help = "Lint all python code: run 'flake8', 'black' and 'mypy'" }
 format = { script = "scripts.codestyle:format", help = "Format all python code: change code formatting where possible (using 'black')" }
-generate = { script = "scripts.process:generate", help = "Generate protobuf source files, previous generation results will be removed; libraries 'grpcio-tools' and 'betterproto' is used for generation" }
+generate = { script = "scripts.process:generate", help = "Generate protobuf source files, previous generation results will be removed, libraries 'grpcio-tools' and 'betterproto' are used for generation" }
 bundle = { script = "scripts.process:bundle", help = "Bundle caerulean installation script; library 'zipapps' is used for bundling" }
 clean = { script = "scripts.process:clean", help = "Delete all algae generated source files, build files and executables, also remove all related Docker containers, images and networks" }
 test-unit = { script = "scripts.test:test_set('unit')", help = "Run unit tests: all the algae client functions in particular" }
@@ -147,7 +137,6 @@ test-remote = { script = "scripts.test:test_set('remote')", help = "Run remote s
 test-smoke = { sequence = ["test-local", "test-remote"], help = "Run smoke tests: run both 'local' and 'remote' smoke tests (specified above)" }
 test-all = { sequence = ["test-unit", "test-integration", "test-local", "test-remote"], help = "Run tests: run all tests (specified above)" }
 setup = { cmd = "python -m setup", help = "Run whirlpool setup package, pass console arguments to it" }
-
 
 [tool.poe.poetry_hooks]
 post_install = "generate"
