--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -23,6 +23,7 @@ ipnet = "^2.10.1"
 lazy_static = "^1.5.0"
 log = "^0.4.22"
 num_enum = "^0.7.3"
+prost = "^0.14.1"
 rand = "^0.8.5"
 regex = "^1.11.1"
 simple-error = "^0.3.1"
@@ -43,6 +44,10 @@ serde = "^1.0.219"
 windivert = "^0.6.0"
 windows = { version = "^0.61.3", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"] }
 wmi = "^0.17.2"
+
+[build-dependencies]
+prost-build = "^0.14.1"
+protoc-bin-vendored = "^3.2.0"
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
 reqwest = { version = "^0.12.23", features = ["blocking", "json"] }
